# algrthm_practice

./: .gitignore  .gitmodules  Cargo.toml  README.md  algrthm_practice.sublime-workspace  main.rs
demo/insertion_sort/: main  main.rs
example/: insertion_sort.rs  priorityQueue.rs  test.rs
matrix/: matrix.rs  mod.rs
sorts/: lib.rs
src/algrthm/: lib.rs
src/algrthm/router/: dijkstra.rs  mod.rs
src/algrthm/sort/: insertion.rs  merge.rs  mod.rs
src/insertion_sort/: main.rs
src/router/: dijkstra.rs
src/sort/: lib.rs
src/sorts/: lib.rs
